# ips2ra

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: default_build_type.cmake
include/ips2ra/: block_permutation.hpp  config.hpp  local_classification.hpp  parallel.hpp  partitioning.hpp  sampling.hpp  sequential.hpp  thread_pool.hpp
src/: example.cpp
